objects/DEF_CS_BypassComponents__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This custom setting is used to bypass workflows, flows, process builders and triggers on basis of profile/user.</description>
    <fields>
        <fullName>Bypass_Flows__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass Flows</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bypass_ProcessBuilder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass ProcessBuilder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bypass_Triggers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass Triggers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bypass_ValidationRules__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass ValidationRules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bypass_Workflow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass Workflow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TriggerNames__c</fullName>
        <label>Trigger Names</label>
        <type>TextArea</type>
    </fields>
    <label>DEF CS Bypass Components</label>
</CustomObject>